--- a/css/queries.css
+++ b/css/queries.css
@@ -11,7 +11,7 @@
   }
 
   .gallery {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -92,6 +92,7 @@
   }
   .btn-mobile-nav {
     display: block;
+    z-index: 999;
   }
   .main-nav {
     background-color: rgba(255, 255, 255, 0.774);
