--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,23 @@ strong {
 .icon-mobile-nav[name="close-outline"] {
   display: none;
 }
+
+/* Stiky Navication */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-bottom: 0;
+  padding-top: 0;
+  z-index: 9999;
+  background-color: rgba(255, 255, 255, 0.97);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
 /* NAVIGATION */
 .main-nav-list {
   display: flex;
@@ -736,4 +753,40 @@ strong {
   font-size: 1.6rem;
   color: #767676;
   transition: all 0.3s;
+}
+
+/* *************************** */
+/* Fix Safari Not Supporting Flex-Gab */
+/* *************************** */
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
 }
